<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/relative"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:theme="@style/OtherTheme">

  <TextView
    android:id="@+id/tV_Title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="110dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:text="@string/title_name"
    android:textColor="@android:color/white"
    android:textSize="50sp"/>

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/tV_Title"
    android:layout_centerHorizontal="true"
    android:orientation="horizontal">

    <TextView
      android:textStyle="italic"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="5dp"
      android:paddingStart="5dp"
      android:paddingEnd="5dp"
      android:text="@string/main_subtitle1"
      android:textSize="15sp"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="5dp"
      android:text="@string/main_subtitle2"
      android:textSize="15sp"/>
  </LinearLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/login_IDFrame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:hint="@string/te_User">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/eT_UserName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:focusable="true"
      android:inputType="text"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/login_PassFrame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:layout_below="@id/login_IDFrame"
    android:layout_centerHorizontal="true"
    android:hint="@string/te_Password">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/eT_Password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"/>

  </android.support.design.widget.TextInputLayout>

  <CheckBox
    android:id="@+id/cB_startService"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:layout_below="@+id/login_PassFrame"
    android:layout_centerHorizontal="true"
    android:text="@string/cB_Service"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="9dp"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:layout_below="@+id/cB_startService"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:orientation="vertical">


    <Button
      android:id="@+id/btn_Login"
      android:layout_width="match_parent"
      android:layout_height="42dp"
      android:paddingTop="6dp"
      android:paddingBottom="6dp"
      android:background="@drawable/bg_fround_trans_white"
      android:foreground="@drawable/ripple_login"
      android:text="@string/btn_Login"/>

    <Button
      android:id="@+id/btn_stopService"
      android:layout_width="match_parent"
      android:layout_height="42dp"
      android:paddingTop="6dp"
      android:paddingBottom="6dp"
      android:background="@drawable/bg_fround_shadow_white"
      android:foreground="@drawable/ripple_login"
      android:text="@string/btn_stopService"
      android:textColor="@android:color/white"
      android:layout_marginTop="12dp"
      android:visibility="gone"
      />

  </LinearLayout>

</RelativeLayout>